# poe2-overlord

./: .cursorrules  .editorconfig  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  ENHANCED_ZONES_IMPLEMENTATION_PLAN.md  HOOKS_REFACTOR_PLAN.md  HOOKS_VALIDATION_CLEANUP_PLAN.md  LICENSE  Makefile  README.md  REFACTORING_CHECKPOINT.md  biome.json  clear_zones_metadata.py  config.dev.json  cursor_hooks_analysis_prompt.md  cursor_hooks_validation_prompt.md  cursor_implementation_plan_prompt.md  cursor_step_implementation_prompt.md  cursor_validation_cleanup_plan_prompt.md  cursor_validation_cleanup_prompt.md  dev.sh  install.sh  migrate_zone_data.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  run.sh  tailwind.config.js  vercel.json
.ai/: README.md
.ai/archive/completed-prds/: 2026-01-10-fix-hanging-tests.md  2026-01-10-frontend-component-testing.md  2026-01-10-frontend-testing-setup.md  2026-01-11-backend-testing-prd.md  2026-01-11-typescript-refactoring.md  2026-01-17-prd-data-integrity.md  2026-01-17-prd-quick-wins.md  2026-02-12-prd-compositing-layer-root-cause.md  2026-02-15-prd-comprehensive-error-handling.md  2026-02-15-prd-frontend-error-handling.md  2026-02-15-prd-frontend-theme-refactor.md  2026-02-15-prd-website-and-shared-theme.md  2026-02-22-prd-character-sql-first-refactoring.md  2026-04-15-prd-character-detail-view.md  2026-04-15-prd-level-history-screen.md  prd-event-system.md  (+5 more)
.ai/memory/: decisions.md  game-data.md  patterns.md
.ai/sessions/: 2026-01-10-comprehensive-frontend-testing.md  2026-01-10-typescript-refactoring.md  2026-01-11-backend-testing.md  2026-01-11-data-integrity-batch.md  2026-01-11-domain-refactoring.md  2026-01-11-event-system-batch.md  2026-01-11-pipeline-execution.md  2026-01-11-quick-wins-batch.md  2026-01-11-real-time-features-batch.md  2026-01-11-refactors-1-batch.md  2026-01-11-refactors-2-batch.md  2026-01-11-refactors-3-batch.md  2026-01-12-refactors-4-batch.md  2026-01-13-character-list-bug-fix.md  2026-02-12-dom-compositing-layer-audit.md  2026-02-15-backend-application-layer-audit-fixes.md  2026-02-15-frontend-error-handling-implementation.md  2026-02-15-website-and-shared-theme.md  2026-02-16-walkthrough-refactor.md  2026-02-17-economy-sqlite-migration.md  2026-02-22-character-sql-first-refactoring.md
.ai/tasks/: current-prd.md  debug-prompt.md  deferred-issues.md  prd-character-detail-view.md  prd-compositing-layer-root-cause.md  prd-comprehensive-error-handling.md  prd-data-integrity.md  prd-dom-compositing-layer-audit.md  prd-event-system.md  prd-frontend-theme-refactor.md  prd-notes-feature.md  prd-quick-wins.md  prd-real-time-features.md  prd-refactors-1-config-wiki.md  prd-refactors-2-monitoring-character.md  prd-refactors-3-zone-economy.md  prd-refactors-4-walkthrough-ui.md  prd-sqlite-migration.md  prd-wiki-parsing-robustness.md
.claude/: ralph-loop.local.md  settings.json
.claude/agents/: code-analyzer.md  debugger.md  implementation-planner.md
.cursor/rules/: frontend.mdc  rust.mdc  tauri.mdc
.github/: dependabot.yml
.github/workflows/: aur-publish.yml  ci-desktop.yml  ci-website.yml  dependabot-auto-merge.yml  release.yml
.zed/: prompts.md
aur/: PKGBUILD
examples/config_examples/: config.example.json
scripts/: bump-version.js
scripts/extract-game-data/: extract-local.mjs  extract.mjs  package-lock.json  package.json  probe-version.mjs  recategorize.mjs  refix-soul-core-mods.mjs
src/: App-old.tsx  App.css  __init__.py  __main__.py  dev_server.py  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/config/: __init__.py  config_manager.py  defaults.py
src/core/: __init__.py  event_bus.py  hotkey_manager.py  overlay_manager.py  process_monitor.py
src/plugins/: __init__.py  base_plugin.py
src/ui/: __init__.py  main_window.py  results_panel.py  search_panel.py  settings_dialog.py  themes.py
src/utils/: __init__.py  helpers.py  logger.py  validators.py
tests/: __init__.py  conftest.py
tests/unit/: test_config_manager.py  test_event_bus.py  test_main_window.py  test_settings_dialog.py
(+4 files in other folders)
