[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poe2-master-overlay"
version = "0.2.0"
description = "A powerful game overlay for Path of Exile 2 on Linux"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "POE2 Master Overlay Developer", email = "developer@example.com"}
]
maintainers = [
    {name = "POE2 Master Overlay Developer", email = "developer@example.com"}
]
keywords = ["poe2", "pathofexile", "overlay", "gaming", "tool", "linux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "pynput>=1.7.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "tox>=4.6.0",
    "watchdog>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/poe2-master"
Documentation = "https://github.com/yourusername/poe2-master#readme"
Repository = "https://github.com/yourusername/poe2-master.git"
"Bug Tracker" = "https://github.com/yourusername/poe2-master/issues"

[project.scripts]
poe2-overlay = "__main__:main"

[project.gui-scripts]
poe2-overlay-gui = "__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
poe2_master = ["*.json", "*.yml", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311, py312, lint, docs
isolated_build = True

[testenv]
deps =
    pytest>=7.4.0
    pytest-cov>=4.1.0
commands =
    pytest {posargs:tests} --cov=src --cov-report=term-missing

[testenv:lint]
deps =
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.5.0
commands =
    black --check src tests
    flake8 src tests
    mypy src

[testenv:docs]
deps =
    sphinx>=7.0.0
    sphinx-rtd-theme>=1.3.0
commands =
    sphinx-build -W -b html docs/source docs/build/html
"""
